fix: AccessControlContextSerializer serial form, parseHttpmd fallback, JwtLoginModuleTest String encode overload
Agent-Logs-Url: https://github.com/pfirmstone/JGDMS/sessions/4e1b75b0-b232-44a4-a0b9-d388d556a3fd

Co-authored-by: pfirmstone <11625778+pfirmstone@users.noreply.github.com>